<resources>
    <string name="app_name">STAR GAMES</string>
    <string name="j_2048">2048</string>
    <string name="j_lightsout">LightsOut</string>
    <string name="returnButton">Return</string>
    <string name="newButton">New</string>
    <string name="pistasButton">Pistas</string>
    <string name="labelTimerText">Tiempo:</string>
    <string name="easyButton">EASY</string>
    <string name="mediumButton">MEDIUM</string>
    <string name="hardButton">HARD</string>
    <string name="puntuacionesButton">PUNTUACIONES</string>
    <string name="puntuacionLabel">Puntuación:</string>
</resources>