<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage"
    tools:context=".Menu">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="77dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/difficulty"
        tools:ignore="ContentDescription" />

    <android.widget.Button
        android:id="@+id/game3X3"
        android:layout_width="178dp"
        android:layout_height="55dp"
        android:layout_gravity="start"
        android:layout_marginTop="36dp"
        android:width="160dp"
        android:height="45dp"
        android:animation="@anim/animation_set"
        android:background="@drawable/button"
        android:enabled="true"
        android:text="@string/easyButton"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationZ="10dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TextContrastCheck"
        tools:visibility="visible" />


    <android.widget.Button
        android:id="@+id/game4X4"
        android:layout_width="178dp"
        android:layout_height="55dp"
        android:layout_gravity="start"
        android:layout_marginTop="32dp"
        android:width="160dp"
        android:height="45dp"
        android:animation="@anim/animation_set"
        android:background="@drawable/button"
        android:enabled="true"
        android:text="@string/mediumButton"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationZ="10dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game3X3"
        tools:ignore="TextContrastCheck"
        tools:visibility="visible" />

    <android.widget.Button
        android:id="@+id/game5x5"
        android:layout_width="178dp"
        android:layout_height="55dp"
        android:layout_gravity="start"
        android:layout_marginTop="32dp"
        android:width="160dp"
        android:height="45dp"
        android:animation="@anim/animation_set"
        android:background="@drawable/button"
        android:enabled="true"
        android:text="@string/hardButton"
        android:textColor="#ffffff"
        android:textSize="20sp"

        android:textStyle="bold"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game4X4"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="385dp"
        android:layout_height="185dp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/lightsout"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <ImageView
        android:id="@+id/alienAnimation"
        android:layout_width="50dp"
        android:layout_height="64dp"
        android:translationZ="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/alien"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>
